--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -2,9 +2,18 @@
    "cells": [
       {
          "cell_type": "code",
-         "execution_count": 14,
+         "execution_count": 146,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "The autoreload extension is already loaded. To reload it, use:\n",
+                  "  %reload_ext autoreload\n"
+               ]
+            }
+         ],
          "source": [
             "%load_ext autoreload\n",
             "%autoreload 2"
@@ -1519,23 +1528,244 @@
          ]
       },
       {
+         "attachments": {},
+         "cell_type": "markdown",
+         "metadata": {},
+         "source": [
+            "## Rank Sweep"
+         ]
+      },
+      {
          "cell_type": "code",
-         "execution_count": 118,
+         "execution_count": 125,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "from src.benchmarks import causality, faithfulness\n",
+            "from h_param_sweep.utils import select_subset_from_relation"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 126,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "max_samples = 200\n",
+            "###################################################\n",
+            "FILTER_RELATIONS: list = [\n",
+            "    # \"country capital city\",\n",
+            "    # \"occupation\",\n",
+            "    \"person superhero name\",\n",
+            "    \"plays pro sport\",\n",
+            "    \"landmark in country\",\n",
+            "    \"outside color of fruits and vegetables\",\n",
+            "    # \"work location\",\n",
+            "    # \"task done by person NEEDS REVISION\",\n",
+            "    # \"word comparative\",\n",
+            "    # \"word past tense\",\n",
+            "    # \"name gender\",\n",
+            "    # \"name religion\",\n",
+            "]\n",
+            "###################################################"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 127,
+         "metadata": {},
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "landmark in country : 200\n",
+                  "outside color of fruits and vegetables : 15\n",
+                  "plays pro sport : 200\n",
+                  "person superhero name : 100\n"
+               ]
+            }
+         ],
+         "source": [
+            "dataset = data.load_dataset()\n",
+            "dataset = data.RelationDataset(\n",
+            "    relations=[\n",
+            "        select_subset_from_relation(\n",
+            "            relation = r,\n",
+            "            n = max_samples)  \n",
+            "        for r in dataset.relations if r.name in FILTER_RELATIONS]\n",
+            ")\n",
+            "for d in dataset.relations:\n",
+            "    print(f\"{d.name} : {len(d.samples)}\")"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 128,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "from src.operators import JacobianIclMeanEstimator\n",
+            "\n",
+            "mean_estimator = JacobianIclMeanEstimator(\n",
+            "    mt=mt,\n",
+            "    h_layer=13,\n",
+            "    bias_scale_factor=0.4       # so that the bias doesn't knock out the prediction too much in the direction of training examples\n",
+            ") "
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 129,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "application/vnd.jupyter.widget-view+json": {
+                     "model_id": "4af9840f004447e5b1880c7c9eb7cd4c",
+                     "version_major": 2,
+                     "version_minor": 0
+                  },
+                  "text/plain": [
+                     "faithfulness:   0%|          | 0/4 [00:00<?, ?it/s]"
+                  ]
+               },
+               "metadata": {},
+               "output_type": "display_data"
+            }
+         ],
+         "source": [
+            "faith_result = faithfulness(\n",
+            "    estimator = mean_estimator,\n",
+            "    dataset = dataset,\n",
+            "    n_train = 3,\n",
+            "    n_trials = 5,\n",
+            "    k = 3\n",
+            ")"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 153,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "from src.editors import LowRankPInvEditor, LinearRelationEditor\n",
+            "editor = LowRankPInvEditor(\n",
+            "    mt = mt, lre = mean_estimator,\n",
+            "    rank = 150, n_tokens=10\n",
+            ")"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 154,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "application/vnd.jupyter.widget-view+json": {
+                     "model_id": "6bdf88c36b98478982ee703e428ebca6",
+                     "version_major": 2,
+                     "version_minor": 0
+                  },
+                  "text/plain": [
+                     "causality:   0%|          | 0/4 [00:00<?, ?it/s]"
+                  ]
+               },
+               "metadata": {},
+               "output_type": "display_data"
+            },
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n",
+                  "<class 'src.editors.LowRankPInvEditor'>\n",
+                  "dict_keys(['rank', 'n_tokens', 'lre'])\n",
+                  " >>  150\n"
+               ]
+            }
+         ],
+         "source": [
+            "causality_results = causality(\n",
+            "    estimator= mean_estimator,\n",
+            "    editor_type = LowRankPInvEditor,\n",
+            "    dataset = dataset,\n",
+            "    rank = 150, n_tokens=10\n",
+            ")"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 150,
          "metadata": {},
          "outputs": [
             {
                "data": {
                   "text/plain": [
-                     "(12, 5)"
+                     "True"
                   ]
                },
-               "execution_count": 118,
+               "execution_count": 150,
                "metadata": {},
                "output_type": "execute_result"
             }
          ],
          "source": [
-            "recall_results_collection[one_key].shape"
+            "issubclass(LowRankPInvEditor, LinearRelationEditor)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 158,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "text/plain": [
+                     "{'efficacy_mean': 0.1877022683620453, 'efficacy_std': 0.3906322717666626}"
+                  ]
+               },
+               "execution_count": 158,
+               "metadata": {},
+               "output_type": "execute_result"
+            }
+         ],
+         "source": [
+            "causality_results.metrics.__dict__"
          ]
       },
       {
