tuned the sweeps

--- a/notebooks/sweep_experiments.ipynb
+++ b/notebooks/sweep_experiments.ipynb
@@ -2,7 +2,7 @@
    "cells": [
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": 1,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -12,7 +12,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 3,
+         "execution_count": 2,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -34,7 +34,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 4,
+         "execution_count": 3,
          "metadata": {},
          "outputs": [
             {
@@ -1528,7 +1528,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": 6,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1538,11 +1538,11 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": 7,
          "metadata": {},
          "outputs": [],
          "source": [
-            "max_samples = 200\n",
+            "max_samples = 20\n",
             "###################################################\n",
             "FILTER_RELATIONS: list = [\n",
             "    # \"country capital city\",\n",
@@ -1563,17 +1563,17 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 8,
          "metadata": {},
          "outputs": [
             {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "landmark in country : 200\n",
+                  "landmark in country : 20\n",
                   "outside color of fruits and vegetables : 15\n",
-                  "plays pro sport : 200\n",
-                  "person superhero name : 100\n"
+                  "plays pro sport : 20\n",
+                  "person superhero name : 20\n"
                ]
             }
          ],
@@ -1592,7 +1592,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -1608,13 +1608,13 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [
             {
                "data": {
                   "application/vnd.jupyter.widget-view+json": {
-                     "model_id": "8fc31bc31ed941f3b6a48ec58bf87e5f",
+                     "model_id": "c796387f7e5d45eea43fd4c71d86fea1",
                      "version_major": 2,
                      "version_minor": 0
                   },
@@ -1632,17 +1632,18 @@
             "    dataset = dataset,\n",
             "    n_train = 3,\n",
             "    n_trials = 5,\n",
-            "    k = 3\n",
+            "    k = 3,\n",
+            "    results_dir=\"../results/faithfulness\",\n",
             ")"
          ]
       },
       {
          "cell_type": "code",
-         "execution_count": 21,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [],
          "source": [
-            "from src.editors import LowRankPInvEditor, BaseLineEditor, LowRankPInvEmbedEditor\n",
+            "from src.editors import LowRankPInvEditor, LowRankPInvEmbedEditor\n",
             "editor = LowRankPInvEditor(\n",
             "    mt = mt, lre = mean_estimator,\n",
             "    rank = 150, n_tokens=10\n",
@@ -1651,13 +1652,13 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": 12,
          "metadata": {},
          "outputs": [
             {
                "data": {
                   "application/vnd.jupyter.widget-view+json": {
-                     "model_id": "630ef2b7ebd542e69d61a58c00b1725d",
+                     "model_id": "82109d35ec2e445fa90780d34d97f7c1",
                      "version_major": 2,
                      "version_minor": 0
                   },
@@ -1667,6 +1668,22 @@
                },
                "metadata": {},
                "output_type": "display_data"
+            },
+            {
+               "ename": "KeyboardInterrupt",
+               "evalue": "",
+               "output_type": "error",
+               "traceback": [
+                  "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                  "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+                  "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m causality_results \u001b[39m=\u001b[39m causality(\n\u001b[1;32m      2\u001b[0m     estimator\u001b[39m=\u001b[39;49m mean_estimator,\n\u001b[1;32m      3\u001b[0m     editor_type \u001b[39m=\u001b[39;49m LowRankPInvEditor,\n\u001b[1;32m      4\u001b[0m     dataset \u001b[39m=\u001b[39;49m dataset,\n\u001b[1;32m      5\u001b[0m     rank \u001b[39m=\u001b[39;49m \u001b[39m150\u001b[39;49m, n_tokens\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m\n\u001b[1;32m      6\u001b[0m )\n",
+                  "File \u001b[0;32m~/Codes/relations/notebooks/../src/benchmarks.py:741\u001b[0m, in \u001b[0;36mcausality\u001b[0;34m(estimator, editor_type, dataset, n_train, n_trials, n_top_lm, n_icl_lm, desc, results_dir, **kwargs)\u001b[0m\n\u001b[1;32m    739\u001b[0m     result \u001b[39m=\u001b[39m editor(subject_original, object_target)\n\u001b[1;32m    740\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 741\u001b[0m     result \u001b[39m=\u001b[39m editor(subject_original, subject_target)\n\u001b[1;32m    743\u001b[0m [token_id_original, token_id_target] \u001b[39m=\u001b[39m (\n\u001b[1;32m    744\u001b[0m     models\u001b[39m.\u001b[39mtokenize_words(mt, [object_original, object_target])\n\u001b[1;32m    745\u001b[0m     \u001b[39m.\u001b[39minput_ids[:, \u001b[39m0\u001b[39m]\n\u001b[1;32m    746\u001b[0m     \u001b[39m.\u001b[39mtolist()\n\u001b[1;32m    747\u001b[0m )\n\u001b[1;32m    748\u001b[0m probs \u001b[39m=\u001b[39m result\u001b[39m.\u001b[39mmodel_logits[\u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mfloat()\u001b[39m.\u001b[39msoftmax(dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+                  "File \u001b[0;32m~/Codes/relations/notebooks/../src/editors.py:115\u001b[0m, in \u001b[0;36mLowRankPInvEditor.__call__\u001b[0;34m(self, subject, target)\u001b[0m\n\u001b[1;32m    112\u001b[0m z_original \u001b[39m=\u001b[39m hiddens\u001b[39m.\u001b[39mhiddens[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39mNone\u001b[39;00m]\n\u001b[1;32m    113\u001b[0m z_target \u001b[39m=\u001b[39m hiddens\u001b[39m.\u001b[39mhiddens[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39mNone\u001b[39;00m]\n\u001b[0;32m--> 115\u001b[0m weight_pinv \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_low_rank_pinv\n\u001b[1;32m    116\u001b[0m delta \u001b[39m=\u001b[39m weight_pinv \u001b[39m@\u001b[39m (z_target \u001b[39m-\u001b[39m z_original)\n\u001b[1;32m    118\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39medit_output\u001b[39m(output):  \u001b[39m# type: ignore\u001b[39;00m\n",
+                  "File \u001b[0;32m~/miniconda3/envs/relations/lib/python3.10/functools.py:981\u001b[0m, in \u001b[0;36mcached_property.__get__\u001b[0;34m(self, instance, owner)\u001b[0m\n\u001b[1;32m    979\u001b[0m val \u001b[39m=\u001b[39m cache\u001b[39m.\u001b[39mget(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattrname, _NOT_FOUND)\n\u001b[1;32m    980\u001b[0m \u001b[39mif\u001b[39;00m val \u001b[39mis\u001b[39;00m _NOT_FOUND:\n\u001b[0;32m--> 981\u001b[0m     val \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfunc(instance)\n\u001b[1;32m    982\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    983\u001b[0m         cache[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattrname] \u001b[39m=\u001b[39m val\n",
+                  "File \u001b[0;32m~/Codes/relations/notebooks/../src/editors.py:71\u001b[0m, in \u001b[0;36mLowRankPInvEditor._low_rank_pinv\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[39mif\u001b[39;00m weight \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     70\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mLRE weight is None, editing does not support this\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 71\u001b[0m \u001b[39mreturn\u001b[39;00m functional\u001b[39m.\u001b[39;49mlow_rank_pinv(matrix\u001b[39m=\u001b[39;49mweight, rank\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrank)\n",
+                  "File \u001b[0;32m~/Codes/relations/notebooks/../src/functional.py:178\u001b[0m, in \u001b[0;36mlow_rank_pinv\u001b[0;34m(matrix, rank)\u001b[0m\n\u001b[1;32m    167\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlow_rank_pinv\u001b[39m(\u001b[39m*\u001b[39m, matrix: torch\u001b[39m.\u001b[39mTensor, rank: \u001b[39mint\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m    168\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Compute a low-rank pseudo-inverse of a matrix.\u001b[39;00m\n\u001b[1;32m    169\u001b[0m \n\u001b[1;32m    170\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    176\u001b[0m \n\u001b[1;32m    177\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 178\u001b[0m     u, s, v \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49msvd(matrix\u001b[39m.\u001b[39;49mfloat())\n\u001b[1;32m    179\u001b[0m     matrix_pinv \u001b[39m=\u001b[39m v[:, :rank] \u001b[39m@\u001b[39m torch\u001b[39m.\u001b[39mdiag(\u001b[39m1\u001b[39m \u001b[39m/\u001b[39m s[:rank]) \u001b[39m@\u001b[39m u[:, :rank]\u001b[39m.\u001b[39mT\n\u001b[1;32m    180\u001b[0m     \u001b[39mreturn\u001b[39;00m matrix_pinv\u001b[39m.\u001b[39mto(matrix\u001b[39m.\u001b[39mdtype)\n",
+                  "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+               ]
             }
          ],
          "source": [
