--- a/notebooks/sweep_experiments.ipynb
+++ b/notebooks/sweep_experiments.ipynb
@@ -50,16 +50,30 @@
          "metadata": {},
          "outputs": [
             {
+               "data": {
+                  "application/vnd.jupyter.widget-view+json": {
+                     "model_id": "d7c3a31376de48cba2df34d72fc2681a",
+                     "version_major": 2,
+                     "version_minor": 0
+                  },
+                  "text/plain": [
+                     "Loading checkpoint shards:   0%|          | 0/41 [00:00<?, ?it/s]"
+                  ]
+               },
+               "metadata": {},
+               "output_type": "display_data"
+            },
+            {
                "name": "stdout",
                "output_type": "stream",
                "text": [
-                  "dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+                  "dtype: torch.float16, device: cuda:0, memory: 26073676800\n"
                ]
             }
          ],
          "source": [
             "device = \"cuda:0\"\n",
-            "mt = models.load_model(\"gptj\", device=device)\n",
+            "mt = models.load_model(\"llama-13b\", device=device)\n",
             "print(\n",
             "    f\"dtype: {mt.model.dtype}, device: {mt.model.device}, memory: {mt.model.get_memory_footprint()}\"\n",
             ")"
