--- a/notebooks/figures/causality_rank.ipynb
+++ b/notebooks/figures/causality_rank.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d64887c5",
+   "id": "564c8066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff459424",
+   "id": "b39efe67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93427c1e",
+   "id": "5fb55e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b357dca",
+   "id": "7039f1b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +64,14 @@
     "plt.plot(ranks, efficacies, label=\"Edit Efficacy\")\n",
     "plt.plot(ranks, faithfulness, label=\"LRE Recall@1\")\n",
     "plt.xlabel(\"Rank\")\n",
+    "plt.xscale(\"log\")\n",
     "plt.legend()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96046b09",
+   "id": "629f80dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697acae1",
+   "id": "ade9dfe7",
    "metadata": {},
    "outputs": [],
    "source": []
