--- a/notebooks/figures/causality_rank.ipynb
+++ b/notebooks/figures/causality_rank.ipynb
@@ -84,6 +84,36 @@
    "id": "ade9dfe7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "results.relations[0].trials[0].best().efficacy_magnitude()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b565adaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c29201f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[x.efficacy_score_hard().mean for x in results.relations[0].trials[0].ranks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2368b06e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
