efficacy baseline layerwise sweeps

--- a/notebooks/efficacy_puzzle.ipynb
+++ b/notebooks/efficacy_puzzle.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +165,30 @@
     "\n",
     "rank_options = [rank.rank for rank in relation_results.trials[0].layers[0].result.ranks]\n",
     "print(f\"{rank_options=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'layer': 10,\n",
+       " 'beta': AggregateMetric(mean=0.350000003973643, stdev=0.1080123431340252, stderr=0.062360955384231684, values=[0.30000001192092896, 0.25, 0.5]),\n",
+       " 'recall': AggregateMetric(mean=0.5380690287811031, stdev=0.05643727737962378, stderr=0.03258407728745537, values=[0.47368421052631576, 0.5294117647058824, 0.6111111111111112]),\n",
+       " 'rank': AggregateMetric(mean=143.33333333333334, stdev=69.44222218666553, stderr=40.09248567259715, values=[230, 60, 140]),\n",
+       " 'efficacy': AggregateMetric(mean=0.8515078546038298, stdev=0.027498749752319394, stderr=0.01587641057187976, values=[0.8421052631578947, 0.8235294117647058, 0.8888888888888888])}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relation_results.best_by_efficacy().__dict__"
    ]
   },
   {
