updated and tested the sweep scripts for LRE calculation with imaginary hs

--- a/notebooks/imaginary_j.ipynb
+++ b/notebooks/imaginary_j.ipynb
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "#################################################\n",
     "h_layer = 7\n",
     "beta = 0.4\n",
-    "n_training = 8\n",
+    "n_training = 10\n",
     "#################################################"
    ]
   },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(75.8125, 274.25)"
+       "(60.34375, 238.875)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(24.125, 245.375)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,28 +246,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brazil -> Bras\\u00edlia | pred: [' Bras (0.83)', ' Brazil (0.10)', ' Sao (0.02)']\n",
-      "Canada -> Ottawa | pred: [' Canada (0.48)', ' Toronto (0.13)', ' Ottawa (0.11)']\n",
-      "Chile -> Santiago | pred: [' Santiago (0.98)', ' Chile (0.02)', ' Lima (0.00)']\n",
-      "China -> Beijing | pred: [' Beijing (0.97)', ' Shanghai (0.01)', ' China (0.01)']\n",
-      "Egypt -> Cairo | pred: [' Cairo (0.97)', ' Egypt (0.03)', ' Islamabad (0.00)']\n",
-      "France -> Paris | pred: [' Paris (0.77)', ' France (0.22)', ' French (0.01)']\n",
-      "India -> New Delhi | pred: [' Mumbai (0.45)', ' Delhi (0.44)', ' India (0.07)']\n",
-      "Italy -> Rome | pred: [' Rome (0.43)', ' Italy (0.31)', ' Milan (0.25)']\n",
-      "Nigeria -> Abuja | pred: [' Nigeria (0.75)', ' Abu (0.08)', ' Tokyo (0.06)']\n",
-      "Russia -> Moscow | pred: [' Moscow (0.98)', ' Russia (0.02)', ' Russian (0.00)']\n",
-      "Saudi Arabia -> Riyadh | pred: [' Riyadh (0.58)', ' Saudi (0.09)', ' Osaka (0.07)']\n",
-      "South Korea -> Seoul | pred: [' Seoul (0.98)', ' Osaka (0.01)', ' Tokyo (0.01)']\n",
-      "Spain -> Madrid | pred: [' Madrid (0.92)', ' Spain (0.06)', ' Barcelona (0.01)']\n",
-      "Turkey -> Ankara | pred: [' Istanbul (0.57)', ' Ankara (0.35)', ' Turkey (0.07)']\n",
-      "Venezuela -> Caracas | pred: [' Venezuela (0.49)', ' Mé (0.15)', ' Bog (0.12)']\n"
+      "Russia -> Moscow | pred: [' Moscow (0.94)', ' Buenos (0.02)', ' Russia (0.01)']\n",
+      "United States -> Washington D.C. | pred: [' Mexico (0.39)', ' Buenos (0.27)', ' Washington (0.12)']\n",
+      "Japan -> Tokyo | pred: [' Tokyo (0.99)', ' Japan (0.00)', ' Manila (0.00)']\n",
+      "Australia -> Canberra | pred: [' Sydney (0.60)', ' Buenos (0.13)', ' Canberra (0.12)']\n",
+      "Saudi Arabia -> Riyadh | pred: [' Riyadh (0.61)', ' Madrid (0.12)', ' Buenos (0.07)']\n",
+      "Peru -> Lima | pred: [' Lima (0.97)', ' Peru (0.02)', ' Bog (0.00)']\n",
+      "Egypt -> Cairo | pred: [' Cairo (0.62)', ' Buenos (0.14)', ' Madrid (0.07)']\n",
+      "Mexico -> Mexico City | pred: [' Mexico (0.99)', ' Mé (0.00)', 'Mexico (0.00)']\n",
+      "Nigeria -> Abuja | pred: [' Mexico (0.63)', ' Lag (0.08)', ' Nigeria (0.06)']\n",
+      "Turkey -> Ankara | pred: [' Ankara (0.33)', ' Istanbul (0.25)', ' Madrid (0.15)']\n",
+      "Brazil -> Bras\\u00edlia | pred: [' Bras (0.93)', ' Brazil (0.02)', ' Sao (0.02)']\n",
+      "Colombia -> Bogot\\u00e1 | pred: [' Bog (0.98)', ' Colombia (0.01)', ' Lima (0.00)']\n",
+      "Venezuela -> Caracas | pred: [' Car (0.85)', ' Bog (0.07)', ' Venezuela (0.02)']\n",
+      "Germany -> Berlin | pred: [' Berlin (0.63)', ' Madrid (0.30)', ' Buenos (0.02)']\n"
      ]
     }
    ],
