BUG FIX: functional.compute_hs_and_zs throws error with h_layer='emb'

--- a/notebooks/imaginary_j.ipynb
+++ b/notebooks/imaginary_j.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-06-21 15:38:34 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
+      "2023-06-21 17:10:13 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,21 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|endoftext|> United States: Washington D.C.\n",
-      " Japan: Tokyo\n",
-      " Germany: Berlin\n",
-      " Pakistan: Islamabad\n",
+      "<|endoftext|> Pakistan: Islamabad\n",
       " Argentina: Buenos Aires\n",
-      " Colombia: Bogot\\u00e1\n",
       " Peru: Lima\n",
-      " Mexico: Mexico City\n",
+      " Australia: Canberra\n",
+      " Germany: Berlin\n",
+      " Saudi Arabia: Riyadh\n",
+      " Russia: Moscow\n",
+      " Italy: Rome\n",
+      " India: New Delhi\n",
+      " South Korea: Seoul\n",
       " {}:\n"
      ]
     }
@@ -123,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "14"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,28 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brazil -> Bras\\u00edlia | pred: [' Bras (0.72)', ' Rio (0.10)', ' Brazil (0.09)']\n",
-      "Canada -> Ottawa | pred: [' Toronto (0.29)', ' Ottawa (0.21)', ' Montreal (0.13)']\n",
-      "Chile -> Santiago | pred: [' Santiago (0.99)', ' Chile (0.00)', '  (0.00)']\n",
-      "China -> Beijing | pred: [' Beijing (0.97)', ' Shanghai (0.02)', ' China (0.01)']\n",
-      "Egypt -> Cairo | pred: [' Cairo (0.96)', '  (0.01)', ' Egypt (0.01)']\n",
-      "France -> Paris | pred: [' Paris (0.90)', ' Buenos (0.02)', ' France (0.01)']\n",
-      "India -> New Delhi | pred: [' Delhi (0.45)', ' New (0.39)', ' Mumbai (0.09)']\n",
-      "Italy -> Rome | pred: [' Rome (0.81)', ' Milan (0.07)', ' New (0.04)']\n",
-      "Nigeria -> Abuja | pred: [' Lag (0.20)', ' Abu (0.19)', '  (0.11)']\n",
-      "Russia -> Moscow | pred: [' Moscow (0.98)', ' Russia (0.01)', ' Kremlin (0.00)']\n",
-      "Saudi Arabia -> Riyadh | pred: ['  (0.28)', '\\n (0.10)', ' Riyadh (0.08)']\n",
-      "South Korea -> Seoul | pred: [' Seoul (0.98)', ' Los (0.00)', ' Tokyo (0.00)']\n",
-      "Spain -> Madrid | pred: [' Madrid (0.87)', ' Barcelona (0.05)', ' Spain (0.01)']\n",
-      "Turkey -> Ankara | pred: [' Ankara (0.48)', ' Istanbul (0.42)', '  (0.02)']\n",
-      "Venezuela -> Caracas | pred: [' Car (0.95)', '  (0.02)', '\\n (0.01)']\n"
+      "Brazil -> Bras\\u00edlia | pred: [' Bras (0.74)', ' Rio (0.11)', ' Sao (0.04)']\n",
+      "Canada -> Ottawa | pred: [' Toronto (0.28)', ' Ottawa (0.23)', ' Vancouver (0.10)']\n",
+      "Chile -> Santiago | pred: [' Santiago (0.98)', '  (0.01)', ' Chile (0.01)']\n",
+      "China -> Beijing | pred: [' Beijing (0.96)', ' Shanghai (0.03)', ' China (0.00)']\n",
+      "Colombia -> Bogot\\u00e1 | pred: [' Bog (0.76)', '  (0.12)', '\\n (0.02)']\n",
+      "Egypt -> Cairo | pred: [' Cairo (0.98)', '  (0.00)', ' Egypt (0.00)']\n",
+      "France -> Paris | pred: [' Paris (0.99)', ' France (0.00)', '  (0.00)']\n",
+      "Japan -> Tokyo | pred: [' Tokyo (1.00)', ' Osaka (0.00)', ' Japan (0.00)']\n",
+      "Mexico -> Mexico City | pred: [' Mexico (0.90)', '  (0.02)', ' New (0.02)']\n",
+      "Nigeria -> Abuja | pred: [' New (0.18)', '  (0.15)', ' Abu (0.09)']\n",
+      "Spain -> Madrid | pred: [' Madrid (0.91)', ' Barcelona (0.03)', '  (0.01)']\n",
+      "Turkey -> Ankara | pred: [' Istanbul (0.52)', ' Ankara (0.46)', ' Turkey (0.01)']\n",
+      "United States -> Washington D.C. | pred: [' Washington (0.82)', ' New (0.11)', ' Los (0.03)']\n",
+      "Venezuela -> Caracas | pred: [' Car (0.73)', '  (0.15)', '\\n (0.04)']\n"
      ]
     }
    ],
@@ -194,28 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "estimator_i = operators.JacobianIclMeanEstimator_Imaginary(\n",
-    "    mt = mt, h_layer=h_layer, beta=1, interpolate_on=4, n_trials=8\n",
+    "    mt = mt, h_layer=7, beta=1, interpolate_on=4, n_trials=8\n",
     ")\n",
     "operator_i = estimator_i(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60.34375, 238.875)"
+       "(59.65625, 223.25)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24.125, 245.375)"
+       "(22.515625, 213.0)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
